--- a/src/index.css
+++ b/src/index.css
@@ -15,23 +15,22 @@ body {
 }
 
 @font-face {
-  font-family: 'Pretendard';
+  font-family: 'Pretendard-Regular';
   src: url('./assets/fonts/Pretendard-Regular.woff2') format('woff2');
-      
-  font-weight: 400;
+
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Pretendard';
+  font-family: 'Pretendard-Bold';
   src: url('./assets/fonts/Pretendard-Bold.woff2') format('woff2');
-  font-weight: 500;
+  
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Pretendard';
+  font-family: 'Pretendard-Thin';
   src: url('./assets/fonts/Pretendard-Thin.woff2') format('woff2');
-  font-weight: 200;
+  
   font-style: normal;
 }
